--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng2-screenshot",
+  "name": "screenshot_nectar",
   "version": "0.1.3",
   "description": "Angular Screenshot",
   "author": "Weihanchen <weihanchen@gmail.com>",
@@ -26,7 +26,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "~8.0.0",
     "@angular/common": "~8.0.0",
@@ -66,7 +66,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^5.1.0",
+    "ng-packagr": "^5.7.1",
     "protractor": "~5.4.0",
     "standard-changelog": "^2.0.11",
     "ts-node": "~7.0.0",
