--- a/projects/ng2-screenshot/package.json
+++ b/projects/ng2-screenshot/package.json
@@ -1,17 +1,19 @@
 {
-    "name": "ng2-screenshot",
-    "version": "0.1.0",
-    "description": "Angular Screenshot",
-    "author": "weihanchen",
-    "license": "MIT",
-    "dependencies": {
-      "lodash": "^4.17.10"
-    },
-    "peerDependencies": {
-      "ng2-completer": "^3.0.2",
-      "@angular/common": "^8.0.1",
-      "@angular/core": "^8.0.1",
-      "@angular/forms": "^8.0.1"
-    }
+  "name": "screenshot_nectar",
+  "version": "0.1.0",
+  "description": "Angular Screenshot",
+  "author": "weihanchen",
+  "license": "MIT",
+  "dependencies": {
+    "lodash": "^4.17.10"
+  },
+  "peerDependencies": {
+    "ng2-completer": "^3.0.2",
+    "@angular/common": "^8.0.1",
+    "@angular/core": "^8.0.1",
+    "@angular/forms": "^8.0.1"
+  },
+  "devDependencies": {
+    "ng-packagr": "^9.0.0"
   }
-  
+}
